@@ -152,6 +152,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-fission-reactor-mk1",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 40,
             ingredients = {
@@ -165,6 +166,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-fission-reactor-mk2",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 45,
             ingredients = {
@@ -178,6 +180,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-fission-reactor-mk3",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 50,
             ingredients = {
@@ -191,6 +194,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-fission-reactor-mk4",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 55,
             ingredients = {
@@ -205,6 +209,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-fission-reactor-mk5",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 60,
             ingredients = {
