@@ -156,6 +156,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-laser-mk1",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 40,
             ingredients = {
@@ -169,6 +170,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-laser-mk2",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 40,
             ingredients = {
@@ -182,6 +184,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-laser-mk3",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 40,
             ingredients = {
@@ -196,6 +199,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-laser-mk4",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 40,
             ingredients = {
@@ -209,6 +213,7 @@ if mods["space-age"] then
         {
             type = "recipe",
             name = "par-laser-mk5",
+            category = "electronics-or-handcrafting",
             enabled = false,
             energy_required = 40,
             ingredients = {
